--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,14 @@
 # V3.1 "Dark Forest" Whale Hunter - Python Dependencies
 # Install with: pip install -r requirements.txt
+# Tested with Python 3.12
 
 # Core
-python-dotenv==1.0.0
-pyyaml==6.0.1
+python-dotenv==1.0.1
+pyyaml==6.0.2
 
 # Async HTTP
-aiohttp==3.9.0
-aiofiles==23.2.1
+aiohttp==3.9.5
+aiofiles==24.1.0
 
 # Database
 # SQLite is built into Python - no extra package needed
@@ -15,39 +16,39 @@ aiofiles==23.2.1
 # neo4j==5.15.0
 
 # Data Processing
-pandas==2.1.0
-numpy==1.26.0
+pandas==2.2.2
+numpy==1.26.4
 
 # Solana
-solders==0.20.0
-solana==0.32.0
+solders==0.21.0
+solana==0.34.3
 base58==2.1.1
 
 # API Clients
 websockets==12.0
-httpx==0.26.0
+httpx==0.27.0
 
 # Rate Limiting
 aiohttp-retry==2.8.3
 
 # Logging & Monitoring
-rich==13.7.0
+rich==13.7.1
 loguru==0.7.2
 
 # Testing
-pytest==7.4.0
-pytest-asyncio==0.23.0
-pytest-cov==4.1.0
+pytest==8.3.2
+pytest-asyncio==0.23.8
+pytest-cov==5.0.0
 
 # Development
-black==23.12.0
-flake8==7.0.0
-mypy==1.8.0
-isort==5.13.0
+black==24.4.2
+flake8==7.1.0
+mypy==1.11.1
+isort==5.13.2
 
 # Optional: Type stubs
-types-pyyaml==6.0.12
-types-aiofiles==23.2.0
+types-pyyaml==6.0.12.20240311
+types-aiofiles==24.1.0.20240626
 
 # Optional: Performance profiling
 # py-spy==0.3.14
@@ -56,5 +57,5 @@ types-aiofiles==23.2.0
 # Phase 3+ Optional Dependencies:
 # neo4j==5.15.0          # Graph database
 # redis==5.0.0           # Caching
-# fastapi==0.109.0       # Webhook receiver
-# uvicorn==0.27.0        # ASGI server
+# fastapi==0.111.0       # Webhook receiver
+# uvicorn==0.30.1        # ASGI server
